deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: develop
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: sqlstorage
          mountPath: /var/lib/mysql

      - name: wordpress
        image: wordpress:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: webstorage
          mountPath: /var/www/html
      volumes:
      - name: webstorage
        persistentVolumeClaim:
          claimName: webpvc
      - name: sqlstorage
        persistentVolumeClaim:
          claimName: sqlpvc
