sql-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sql
  namespace: develop
  labels:
    app: demo
spec:
  selector:
    matchLabels:
      app: demo 
  serviceName: sql  
  replicas: 1
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: sqlstorage
          mountPath: /var/lib/mysql
      volumes:
      - name: sqlstorage
        persistentVolumeClaim:
          claimName: sqlpvc
