sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: develop
  labels:
    app: demo
spec:
  selector:
    app: demo
  type: ClusterIP
  ports:
    - name: sql
      protocol: TCP
      port: 3306
      targetPort: 3306
