web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webservice
  namespace: develop
  labels:
    app: demo
spec:
  selector:
    app: demo
  type: NodePort
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
